--- a/NuGet.config
+++ b/NuGet.config
@@ -10,7 +10,7 @@
     <add key="AzureFunctionsRelease" value="https://azfunc.pkgs.visualstudio.com/e6a70c92-4128-439f-8012-382fe78d6396/_packaging/AzureFunctionsRelease/nuget/v3/index.json" />
     <add key="AzureFunctionsPreRelease" value="https://azfunc.pkgs.visualstudio.com/e6a70c92-4128-439f-8012-382fe78d6396/_packaging/AzureFunctionsPreRelease/nuget/v3/index.json" />
     <!-- dotnet-tools is required for Microsoft.CodeAnalysis.CSharp.Analyzer.Testing.XUnit -->
-    <add key="dotnet-tools" value="
+    <add key="dotnet-tools" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-tools/nuget/v3/index.json"/>
     <add key="Slsec" value="https://msazure.pkgs.visualstudio.com/f3247cef-e371-4261-b105-33f9613c6d8e/_packaging/ServerlessSecurity/nuget/v3/index.json" />
   </packageSources>
 </configuration>
